ajout colors font style création box html ok au w3c - pb sur prochainement et footer

--- a/chic.html
+++ b/chic.html
@@ -6,9 +6,7 @@
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="stylechic.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">  
-        <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
-    
+        <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>  
@@ -17,55 +15,67 @@
             </h1>            
         </header>
         <main>
-            <header class="textchic">
+            <h2>
                 Le chic à la française
-            </header>
+            </h2>
             <div class="menuchic">    
-                <section class="menuchictitle">
-                    <h2>
+                <section class="menu2h">
+                    <h5>
                         Le chic à la française
-                    </h2>
+                    </h5>
                 </section>
-                <section class="menuchicmeal">
+                <section class="menu2s">
                     <div class="police1">
                         <h3>
                             Pour se mettre en appétit
                         </h3>
-                            <br>Tartare de poulpe acidulé aux zests d’orange
-                                <span class="prix">
+                            <span class="plat">
+                                Tartare de poulpe acidulé aux zests d’orange
+                            </span>
+                            <span class="prix">
                                     79€
-                                </span>
-                            <br>Velouté de légumes d’antan
-                                <span class="prix">
-                                    57€
-                                </span>
-                            <br>Soupe à l’oignon revisitée
-                                <span class="prix">
-                                    57€
-                                </span>
+                            </span>
+                            <br><span class="plat">
+                                Velouté de légumes d’antan
+                            </span>
+                            <span class="prix">
+                                57€
+                            </span>
+                            <br><span class="plat">
+                                Soupe à l’oignon revisitée
+                            </span>
+                            <span class="prix">
+                                57€
+                            </span>
                     </div>
                     <div class="police2">
                         <h3>
                             Plaisir des papilles
                         </h3>
-                            <br>Coquilles Saint-Jacques accompagnées d’une purée de panais
-                                    <span class="prix">
-                                        95€
-                                    </span>
-                                <br>Magret de canard et parmentier de pommes de terre 
-                                    <span class="prix">
-                                        88€
-                                    </span>
-                                <br>Pigeonneau d’Ille et Vilaine sur son lit de gnocchis aux légumes
-                                    <span class="prix">
-                                        175€
-                                    </span>
+                            <span class="plat">
+                                Coquilles Saint-Jacques accompagnées d’une purée de panais
+                            </span>        
+                            <span class="prix">
+                                95€
+                            </span>
+                            <br><span class="plat">
+                                Magret de canard et parmentier de pommes de terre 
+                            </span>
+                            <span class="prix">
+                                88€
+                            </span>
+                            <br><span class="plat">
+                                Pigeonneau d’Ille et Vilaine sur son lit de gnocchis aux légumes
+                            </span>
+                            <span class="prix">
+                                175€
+                            </span>
                     </div>
                     <div class="police3">
                         <h3>
                             Gourmandises sucrées
                         </h3>
-                            <br>Pétales de violette glacés et purée de noisettes
+                            Pétales de violette glacés et purée de noisettes
                             <br>Fondant au chocolat revisité
                             <br>Millefeuille croustillant 
                     </div>
