--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
         <meta charset="utf-8"/>
         <title>Ohmyfood</title>
         <link rel="stylesheet" href="style.css"/>
-        <link rel="stylesheet" href="stylenote.css"/>
-        <link rel="stylesheet" href="stylechic.css"/>
-        <link rel="stylesheet" href="styledelice.css"/>
-        <link rel="stylesheet" href="stylepalette.css"/>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">  
-        <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
-        
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">       
+        <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>  
@@ -20,50 +14,56 @@
             </h1>            
         </header>
         <main>
-            <section class="note">
-                <a href="note.html">
-                    <h5>
-                        La note enchantée
-                    </h5>
-                    <h4>
-                        Menu
-                    </h4>
-                </a>
-            </section>
-            <section class="chic">
-                <a href="chic.html">
-                    <h5>
-                        <div class="linear-gradient">
+            <div class="ligne1">
+                <section class="note">
+                    <a href="note.html">
+                        <i class="fas fa-music fa-2x">
+                        </i>
+                        <h5>
+                            La note enchantée
+                        </h5>
+                        <h4>
+                            MENU
+                        </h4>
+                    </a>
+                </section>
+                <section class="chic">
+                    <a href="chic.html">
+                        <h5>
                             Le chic à la française
-                        </div>
-                    </h5>
-                    <h4>
-                        Menu
-                    </h4>
-                </a>
-            </section>
-            <section class="delice">
-                <a href="delice.html">
-                    <h5>
-                        Le délice des papilles
-                    </h5>
-                    <h4>
-                        Menu
-                    </h4>
-                </a>
-            </section>
-            <section class="palette">
-                <a href="palette.html">
-                    <h5>
-                        La palette du goût
-                    </h5>
-                    <h4>
-                        Menu
-                    </h4>
-                </a>
-            </section>
-            <div id="prochainement">
-                Prochainement
+                        </h5>
+                        <h4>
+                            Menu
+                        </h4>
+                    </a>
+                </section>
+            </div>
+            <div class="ligne2">    
+                <section class="delice">
+                    <a href="delice.html">
+                        <h5>
+                            Le délice des papilles
+                        </h5>
+                        <h4>
+                            Menu
+                        </h4>
+                    </a>
+                </section>
+                <section class="palette">
+                    <a href="palette.html">
+                        <h5>
+                            La palette du goût
+                        </h5>
+                        <h4>
+                            Menu
+                        </h4>
+                    </a>
+                </section>
+            </div>
+            <div class="ligne3">
+                    <h3>
+                        Prochainement
+                    </h3>
             </div>
         </main>
         <footer>
