--- a/note.html
+++ b/note.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="stylenote.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
+        
+        <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>  
@@ -14,24 +17,24 @@
             </h1>            
         </header>
         <main>
-            <header class="text">
-                <h2>
+            <h2>
                     La note enchantée
-                </h2>
-            </header>
+            </h2>
             <div class="menunote">
-                <header class="menu1h">
-                    <i class="fas fa-music">
+                <section class="menu1h">
+                    <i class="fas fa-music fa-6x">
                     </i>
-                    <p>
+                    <h5>
                         La note enchantée
-                    </p>
-                </header>
+                    </h5>
+                </section>
                 <section class="menu1s">
                 <h3>
                     Prélude
                 </h3>
-                    <br>Ravioles de foie gras accompagnés de leur crème à la truffe
+                    <br><span class="plat">
+                            Ravioles de foie gras accompagnés de leur crème à la truffe
+                        </span>
                         <span class="prix">
                             98€
                         </span>
@@ -68,11 +71,11 @@
                     <br>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande
                     <br>Baba au rhum revisité avec son coulis de citron
                     <br>Tarte au citron meringuée destructurée
-                <p>
+                <h5>
                     <i class="fas fa-music">
                     </i>
                     La note enchantée
-                </p>
+                </h5>
                 </section>
             </div>    
         </main>
