--- a/palette.html
+++ b/palette.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="stylepalette.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
     </head>
 <body>
     <header>  
@@ -14,15 +15,15 @@
         </h1>            
     </header>
     <main>
-        <section class="text">
-            <h2>
-                La palette du goût
-            </h2>
-        </section>
+        <h2>
+            La palette du goût
+        </h2>
         <div class="menupalette">
-            <header class="menu4h">
-                La palette du goût
-            </header>
+            <section class="menu4h">
+                <h5>
+                    La palette du goût
+                </h5>
+            </section>
             <section class="menu4s">
                 <h3>
                     Esquisse
