ajustement DRY - modif responsive sur chic

--- a/chic.html
+++ b/chic.html
@@ -5,6 +5,7 @@
         <title>Ohmyfood - Le Chic à la Française</title>
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="stylechic.css"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
     </head>
