effets graphiques ok sauf points de suspension en cours de résolution - DRY retravaillé - clip-path intégrés

--- a/chic.html
+++ b/chic.html
@@ -29,9 +29,13 @@
                 </section>
                 <section class="menu2s">
                     <div class="police1">
-                        <h3>
-                            Pour se mettre en appétit
-                        </h3>
+                        <div class="deco">
+                            <span class="img1"></span>
+                                <h3>
+                                    Pour se mettre en appétit
+                                </h3>
+                            <span class="img2"></span>
+                        </div>
                             <div class="plat">
                                 <p>
                                 Tartare de poulpe acidulé aux zests d’orange
@@ -54,9 +58,13 @@
                             </div>
                     </div>
                     <div class="police2">
-                        <h3>
-                            Plaisir des papilles
-                        </h3>
+                        <div class="deco">
+                            <span class="img1"></span>
+                                <h3>
+                                    Plaisir des papilles
+                                </h3>
+                            <span class="img2"></span>
+                        </div>
                             <p>
                                 Coquilles Saint-Jacques accompagnées d’une purée de panais  
                                     <span class="prix">
@@ -77,9 +85,13 @@
                             </p>
                     </div>
                     <div class="police3">
-                        <h3>
-                            Gourmandises sucrées
-                        </h3>
+                        <div class="deco">
+                            <span class="img1"></span>
+                                <h3>
+                                    Gourmandises sucrées
+                                </h3>
+                            <span class="img2"></span>
+                        </div>
                             <p>
                                 Pétales de violette glacés et purée de noisettes
                             </p>
@@ -94,11 +106,13 @@
             </div>
         </main>
         <footer>
-            <a href="mentions.html" target="_blank">Mentions légales
-            </a>  
-            <a href="mailto:julieloriau@gmail.com">
-                Contactez-nous          
-            </a>
+            <div class="wiggle">
+                <a href="mentions.html" target="_blank">Mentions légales
+                </a>  
+                <a href="mailto:julieloriau@gmail.com">
+                    Contactez-nous          
+                </a>
+            </div>
         </footer>
     </body>
 </html> 
