--- a/delice.html
+++ b/delice.html
@@ -28,85 +28,105 @@
                     </h5>
                 </section>                
                 <section class="menu3s">
-                    <h3>
-                        Pour bien commencer 
-                    </h3>
-                        <div class="plat">
-                            <p>
-                                Tartare de thon assaisonné au yuzu
-                                    <span class="prix">
-                                        55€
-                                    </span>
-                            </p>
-                            <p>
-                                Bouchée de homard croustillant et sa farandole de petits légumes
-                                    <span class="prix">
-                                        89€
-                                    </span>
-                            </p>
-                            <p>
-                                Velouté de cèpes aux truffes
-                                    <span class="prix">
-                                        56€
-                                    </span>
-                            </p>
+                    <div class="police1">
+                        <div class="deco">
+                            <span class="img1"></span>
+                                <h3>
+                                    Pour bien commencer
+                                </h3>
+                            <span class="img2"></span>
                         </div>
-                    <h3>
-                        Pour bien continuer
-                    </h3>
-                        <div class="plat">
-                            <p>
-                                Poulet rôti aux herbes de provence et sa crème de truffe
-                                    <span class="prix">
-                                        110€
-                                    </span>
-                            </p>
-                            <p>
-                                Langouste rôtie et ses légumes de saison
-                                    <span class="prix">
-                                        225€
-                                    </span>
-                            </p>
-                            <p>
-                                Côte de boeuf angus et sa purée de panais
-                                    <span class="prix">
-                                        115€
-                                    </span>
-                            </p>
+                    </div>
+                    <div class="plat">
+                        <p>
+                            Tartare de thon assaisonné au yuzu
+                                <span class="prix">
+                                    55€
+                                </span>
+                        </p>
+                        <p>
+                            Bouchée de homard croustillant et sa farandole de petits légumes
+                                <span class="prix">
+                                    89€
+                                </span>
+                        </p>
+                        <p>
+                            Velouté de cèpes aux truffes
+                                <span class="prix">
+                                    56€
+                                </span>
+                        </p>
+                    </div>
+                    <div class="police2">
+                        <div class="deco">
+                        
+                            <span class="img1"></span>
+                                <h3>
+                                    Pour bien continuer
+                                </h3>
+                            <span class="img2"></span>
                         </div>
-                    <h3>
-                        Pour bien terminer 
-                    </h3>
-                        <div class="plat">
-                            <p>
-                                Farandole de desserts du chef
-                                    <span class="prix">
-                                        55€
-                                    </span>
-                            </p>
-                            <p>
-                                Crème brulée revisitée
-                                    <span class="prix">
-                                        60€
-                                    </span>
-                            </p>
-                            <p>
-                                Tiramisu à la noisette
-                                    <span class="prix">
-                                        55€
-                                    </span>  
-                            </p>
+                    </div>
+                    <div class="plat">
+                        <p>
+                            Poulet rôti aux herbes de provence et sa crème de truffe
+                                <span class="prix">
+                                    110€
+                                </span>
+                        </p>
+                        <p>
+                            Langouste rôtie et ses légumes de saison
+                                <span class="prix">
+                                    225€
+                                </span>
+                        </p>
+                        <p>
+                            Côte de boeuf angus et sa purée de panais
+                                <span class="prix">
+                                    115€
+                                </span>
+                        </p>
+                    </div>
+                    <div class="police3">
+                        <div class="deco">
+                            <span class="img1"></span>
+                                <h3>
+                                    Pour bien terminer 
+                                </h3>
+                            <span class="img2"></span>
                         </div>
+                    </div>
+                    <div class="plat">
+                        <p>
+                            Farandole de desserts du chef
+                                <span class="prix">
+                                    55€
+                                </span>
+                        </p>
+                        <p>
+                            Crème brulée revisitée
+                                <span class="prix">
+                                    60€
+                                </span>
+                        </p>
+                        <p>
+                            Tiramisu à la noisette
+                                <span class="prix">
+                                    55€
+                                </span>  
+                        </p>
+                    </div>
                 </section>  
             </div>    
         </main>
         <footer>
-            <a href="mentions.html" target="_blank">
-                Mentions légales
-            </a>  
-            <a href="mailto:julieloriau@gmail.com">
-                Contactez-nous          
-            </a>
+            <div class="wiggle">
+                <a href="mentions.html" target="_blank">Mentions légales
+                </a>  
+                <a href="mailto:julieloriau@gmail.com">
+                    Contactez-nous          
+                </a>
+            </div>
         </footer>
     </body>
 </html> 
