--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css"/>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">       
-        <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Sriracha&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kalam&family=Kaushan+Script&family=Montserrat&family=Noto+Serif&family=Roboto+Slab&family=Sriracha&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>  
@@ -31,7 +31,6 @@
                             </h4>
                         </a>
                     </div>
-                    </section>
                 </section>
                 <section class="chic">
                     <div class="zoom">
@@ -74,16 +73,29 @@
             </div>
             <div class="ligne3">
                     <h3>
-                        Prochainement
+                        Prochainement 
+                            <span class="point">
+                                <span id="point1">
+                                    .
+                                </span>
+                                <span id="point2">
+                                    .
+                                </span>
+                                <span id="point3">
+                                    .
+                                </span>
+                            </span>
                     </h3>
             </div>
         </main>
         <footer>
-            <a href="mentions.html" target="_blank">Mentions légales
-            </a>  
-            <a href="mailto:julieloriau@gmail.com">
-                Contactez-nous          
-            </a>
+            <div class="wiggle">
+                <a href="mentions.html" target="_blank">Mentions légales
+                </a>  
+                <a href="mailto:julieloriau@gmail.com">
+                    Contactez-nous          
+                </a>
+            </div>
         </footer>
     </body>
 </html>    
