--- a/mentions.html
+++ b/mentions.html
@@ -142,12 +142,14 @@
                     </p>
             </div>
         </main>
-            <footer>
+        <footer>
+            <div class="wiggle">
                 <a href="mentions.html" target="_blank">Mentions légales
                 </a>  
                 <a href="mailto:julieloriau@gmail.com">
                     Contactez-nous          
-                </a> 
+                </a>
+            </div>
         </footer>
     </body>
 </html>
