--- a/note.html
+++ b/note.html
@@ -32,9 +32,13 @@
                     </h5>
                 </section>
                 <section class="menu1s">
-                    <h3>
-                        Prélude
-                    </h3>
+                        <div class="deco">
+                            <span class="img1"></span>
+                                <h3>
+                                    Prélude
+                                </h3>
+                            <span class="img2"></span>
+                        </div>
                         <div class="plat">
                                 <p>
                                     Ravioles de foie gras accompagnés de leur crème à la truffe
@@ -61,9 +65,13 @@
                                     </span>
                             </p>
                         </div>
-                    <h3>
-                        Point d’orgue
-                    </h3>
+                        <div class="deco">
+                            <span class="img1"></span>
+                                <h3>
+                                    Point d’orgue
+                                </h3>
+                            <span class="img2"></span>
+                        </div>
                         <div class="plat">
                             <p>
                                 Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave
@@ -84,9 +92,13 @@
                                     </span>
                             </p>
                         </div>
-                    <h3>
-                        Mouvement final
-                    </h3>
+                        <div class="deco">
+                            <span class="img1"></span>
+                                <h3>
+                                    Mouvement final
+                                </h3>
+                            <span class="img2"></span>
+                        </div>
                         <div class="plat">
                             <p>
                                 Macaron noisette et chocolat, glace au caramel brun et sel de Guérande
@@ -106,12 +118,14 @@
                 </section>
             </div>    
         </main>
-        <footer>    
-            <a href="mentions.html" target="_blank">Mentions légales
-            </a>  
-            <a href="mailto:julieloriau@gmail.com">
-                Contactez-nous          
-            </a>
-        </footer> 
+        <footer>
+            <div class="wiggle">
+                <a href="mentions.html" target="_blank">Mentions légales
+                </a>  
+                <a href="mailto:julieloriau@gmail.com">
+                    Contactez-nous          
+                </a>
+            </div>
+        </footer>
     </body>
 </html> 
