--- a/palette.html
+++ b/palette.html
@@ -28,9 +28,13 @@
                     </h5>
                 </section>
                 <section class="menu4s">
-                    <h3>
-                        Esquisse
-                    </h3>
+                    <div class="deco">
+                        <span class="img1"></span>
+                            <h3>
+                                Esquisse 
+                            </h3>
+                        <span class="img2"></span>
+                    </div>
                         <div class="plat">
                             <p>
                                 Fricassée d’escargot au piment d’espelette
@@ -51,9 +55,13 @@
                                     </span>
                             </p>
                         </div>
-                    <h3>
-                        Oeuvre de maître
-                    </h3>
+                        <div class="deco">
+                            <span class="img1"></span>
+                                <h3>
+                                    Oeuvre de maître 
+                                </h3>
+                            <span class="img2"></span>
+                        </div>
                         <div class="plat">
                             <p>
                                 Filet de boeuf aux herbes accompagné de sa ribambelle de légumes
@@ -74,9 +82,13 @@
                                     </span>
                             </p>
                         </div>
-                    <h3>
-                        Au sommet de l’art
-                    </h3>
+                        <div class="deco">
+                            <span class="img1"></span>
+                                <h3>
+                                    Au sommet de l'art 
+                                </h3>
+                            <span class="img2"></span>
+                        </div>
                         <div class="plat">
                             <p>
                                 Paris-Brest revisité
@@ -101,11 +113,13 @@
             </div>
         </main>
         <footer>
-            <a href="mentions.html" target="_blank">Mentions légales
-            </a>  
-            <a href="mailto:julieloriau@gmail.com">
-                Contactez-nous          
-            </a>
+            <div class="wiggle">
+                <a href="mentions.html" target="_blank">Mentions légales
+                </a>  
+                <a href="mailto:julieloriau@gmail.com">
+                    Contactez-nous          
+                </a>
+            </div>
         </footer>
     </body>
 </html> 
