projet finalisé - responsive ok - w3c css problématique icones

--- a/chic.html
+++ b/chic.html
@@ -65,24 +65,26 @@
                                 </h3>
                             <span class="img2"></span>
                         </div>
-                            <p>
-                                Coquilles Saint-Jacques accompagnées d’une purée de panais  
-                                    <span class="prix">
-                                        95€
-                                    </span>
-                            </p>
-                            <p>
-                                Magret de canard et parmentier de pommes de terre 
-                                    <span class="prix">
-                                        88€
-                                    </span>
-                            </p>
-                            <p>
-                                Pigeonneau d’Ille et Vilaine sur son lit de gnocchis aux légumes
-                                    <span class="prix">
-                                        175€
-                                    </span>
-                            </p>
+                            <div class="plat">
+                                <p>
+                                    Coquilles Saint-Jacques accompagnées d’une purée de panais  
+                                        <span class="prix">
+                                            95€
+                                        </span>
+                                </p>
+                                <p>
+                                    Magret de canard et parmentier de pommes de terre 
+                                        <span class="prix">
+                                            88€
+                                        </span>
+                                </p>
+                                <p>
+                                    Pigeonneau d’Ille et Vilaine sur son lit de gnocchis aux légumes
+                                        <span class="prix">
+                                            175€
+                                        </span>
+                                </p>
+                            </div>
                     </div>
                     <div class="police3">
                         <div class="deco">
@@ -92,16 +94,18 @@
                                 </h3>
                             <span class="img2"></span>
                         </div>
-                            <p>
-                                Pétales de violette glacés et purée de noisettes
-                            </p>
-                            <p>
-                                Fondant au chocolat revisité
-                            </p>
-                            <p>
-                                Millefeuille croustillant
-                            </p> 
-                    </div>
+                            <div class="plat">
+                                <p>
+                                    Pétales de violette glacés et purée de noisettes
+                                </p>
+                                <p>
+                                    Fondant au chocolat revisité
+                                </p>
+                                <p>
+                                    Millefeuille croustillant
+                                </p>
+                            </div> 
+                        </div>
                 </section>
             </div>
         </main>
