--- a/note.html
+++ b/note.html
@@ -110,7 +110,7 @@
                                 Tarte au citron meringuée destructurée
                             </p>
                             <h5>
-                                <i class="fas fa-music">
+                                <i class="fas fa-music fa-1x">
                                 </i>
                                 La note enchantée
                             </h5>
